started ToDoList app, patched calculator button overflow issue

--- a/apps/calculatrice/style.css
+++ b/apps/calculatrice/style.css
@@ -17,7 +17,7 @@ table {
 }
 td {
 	padding: 0;
-	overflow: scroll;
+	overflow: hidden;
 	text-overflow: ellipsis;
 }
 tr {
